--- a/css/style.css
+++ b/css/style.css
@@ -302,3 +302,50 @@ a {
 .slick-prev {
   right: 60px;
 }
+
+.tour {
+  padding: 100px 0;
+}
+
+.tour__title {
+  margin-bottom: 77px;
+}
+
+.tour__box {
+ column-count: 2;
+ column-gap: 46px;
+ border-bottom: 1px solid #D9D9DE;
+ padding-bottom: 50px;
+ margin-bottom: 44px;
+}
+
+.tour__text {
+ margin-bottom: 20px;
+}
+
+.tour__text span {
+ font-weight: 700;
+}
+
+.tour__info {
+ display: grid;
+ grid-template-columns: repeat(5, 1fr);
+ grid-gap: 70px;
+}
+
+.tour__info-item {
+ font-family: 'PT Serif', serif;
+ font-size: 58px;
+ font-weight: 700;
+ line-height: 60px;
+ text-align: center;
+ color: #886239;
+}
+
+.tour__info-text {
+ font-family: 'Roboto', sans-serif;
+ font-size: 20px;
+ font-weight: 500;
+ line-height: 25px;
+ color: #1F1E1E;
+}
