--- a/css/style.css
+++ b/css/style.css
@@ -349,3 +349,94 @@ a {
  line-height: 25px;
  color: #1F1E1E;
 }
+
+.booking {
+  background: #EAEAEA;
+  padding: 75px 0;
+}
+
+.booking__title {
+  margin-bottom: 43px;
+}
+
+.booking__form {
+  max-width: 830px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+
+.booking__input {
+  width: 256px;
+  height: 44px;
+  font-size: 16px;
+  border: 1px solid #D9D9DE;
+  padding: 11px 14px 12px;
+  margin-bottom: 28px;
+}
+
+.booking__input::placeholder,
+.booking__area::placeholder {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: #C4C4C4;
+}
+
+.booking__area {
+  width: 100%;
+  height: 112px;
+  border: 1px solid #D9D9DE;
+  resize: none;
+  padding: 14px;
+  margin-bottom: 67px;
+}
+
+.booking__btn {
+  font-size: 18px;
+  line-height: 21px;
+  color: #fff;
+  background: #886239;
+  border-radius: 30px;
+  border: none;
+  cursor: pointer;
+  padding: 19px 60px 20px;
+}
+
+.booking__label {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  line-height: 130%;
+  text-decoration: underline;
+}
+
+.booking__checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  padding-left: 45px;
+}
+
+.booking__checkbox-style {
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  border: 2px solid #C4C4C4;
+  border-radius: 2px;
+  margin-left: -45px;
+}
+
+.booking__checkbox:checked + .booking__checkbox-style::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 16px;
+  height: 16px;
+  background-color: #C4C4C4;
+}
