UPDATE И ЗАВЕРШЕНИЕ ВЕРСТКИ (адаптив чуть позже буит

--- a/css/style.css
+++ b/css/style.css
@@ -440,3 +440,55 @@ a {
   height: 16px;
   background-color: #C4C4C4;
 }
+
+.footer {
+  background-color: #1F1E1E;
+  padding: 80px 0;
+}
+
+.footer__logo {
+  text-align: center;
+  margin-bottom: 70px;
+}
+
+.footer__box {
+  max-width: 830px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  line-height: 130%;
+  color: #fff;
+  margin: 0 auto;
+}
+
+.footer__info {
+  width: 225px;
+}
+.footer__box-title {
+  font-weight: 500;
+  margin-bottom: 7px;
+}
+.footer__copy {
+  opacity: 0.8;
+  margin-bottom: 3px;
+}
+.footer__link {
+  text-decoration: underline;
+  opacity: 0.8;
+}
+.footer__address {
+  width: 165px;
+}
+.footer__address-text {
+  opacity: 0.8;
+}
+.footer__contacts {
+  width: 210px;
+}
+.footer__phone {
+  opacity: 0.8;
+}
+.footer__mail {
+  display: block;
+  opacity: 0.8;
+}
